--- a/miniprogram/pages/my/mine.less
+++ b/miniprogram/pages/my/mine.less
@@ -12,7 +12,7 @@
 .page-container {
   min-height: 100vh;
   background: @bg-base;
-  padding-bottom: 60rpx;
+  padding-bottom: 240rpx; // Increased padding for Floating TabBar
   box-sizing: border-box;
 }
 
